--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,7 @@
 /***GÉNÉRAL***/
 body{
-    //background-image: url('grid.png');
-    background: linear-gradient(90deg, rgba(230, 97, 228, 0.692) 1%, rgba(0,212,255,0.7152777777777778) 100%);
+    background-image: url('grid_2.jpg');
+    background-repeat: no-repeat;
     
 }
 h2{
@@ -12,7 +12,7 @@ div{
     font-family: "Pixel Operator";
 }
 
-/***BOUTONS***/
+
 
 
 /***SELECT***/
@@ -35,64 +35,118 @@ select:hover {
 
 
 /***PALETTE COULEUR***/
-.palette_couleurs{
-    background-color:  rgb(235, 235, 235);
-    border-radius: 5px;
-    width: 100px;
-    height: 100px;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 5px;
-    position: relative;
-    left: 555px;
-    z-index: 200;
-    bottom: 645px;
-    display: none;
+.palette{
     
-    .couleur1{
-        width: 30px;
-        height: 30px;
-        background-color: rgb(0, 0, 0);
+    margin-top: 10px;
+    margin-right: 10px;
+    display: flex;
+
+    .select_color{
+        height: 46px;
+        width: 46px;
+        border: ridge  rgb(222, 222, 222);
+
+        .first_color{
+            height: 20px;
+            width: 20px ;
+            border: ridge  rgb(222, 222, 222);
+            position: relative;
+            top: 5px;
+            left: 5px;
+            z-index: 2;
+        }
+
+        .second_color{
+            height: 20px;
+            width: 20px ;
+            border: ridge  rgb(222, 222, 222);
+            position: relative;
+            left: 16px;
+            bottom: 10px;
+            background-color: white;
+        }
     }
-    .couleur2{
-        width: 30px;
-        height: 30px;
-        background-color: rgb(36, 124, 117);
-    }
-    .couleur3{
-        width: 30px;
-        height: 30px;
-        background-color: rgb(81, 177, 110);
-    }
-    .couleur4{
-        width: 30px;
-        height: 30px;
-        background-color: rgb(244, 117, 255);
-    }
-    .couleur5{
-        width: 30px;
-        height: 30px;
-        background-color: rgb(214, 67, 214);
-    }
-    .couleur6{
-        width: 30px;
-        height: 30px;
-        background-color: rgb(41, 197, 184);
-    }
-    .couleur7{
-        width: 30px;
-        height: 30px;
-        background-color: rgb(255, 205, 66);
-    }
-    .couleur8{
-        width: 30px;
-        height: 30px;
-        background-color: rgb(255, 114, 49);
-    }
-    .couleur9{
-        width: 30px;
-        height: 30px;
-        background-color: rgb(206, 206, 206);
+
+    .all_colors{
+        display: flex;
+        flex-wrap: wrap;
+        width: 300px;
+        height: 45px;
+        .color{
+            height: 20px;
+            width: 20px ;
+            border: ridge  rgb(222, 222, 222);
+        }
+        .color:nth-child(1){
+            background-color: #e0a3c4;
+        }
+        .color:nth-child(2){
+            background-color:#ecd6e2; 
+        }
+        .color:nth-child(3){
+            background-color:#3b8ccb; 
+        }
+        .color:nth-child(4){
+            background-color:#f2aadc; 
+        }
+        .color:nth-child(5){
+            background-color:#dbafe4; 
+        }
+        .color:nth-child(6){
+            background-color:#dfa1ee; 
+        }
+        .color:nth-child(7){
+            background-color:#e46ee8; 
+        }
+        .color:nth-child(8){
+            background-color:#a3d6f5; 
+        }
+        .color:nth-child(9){
+            background-color:#cc81ea; 
+        }
+        .color:nth-child(10){
+            background-color:#ecf5d8; 
+        }
+        .color:nth-child(11){
+            background-color:#f0d1f1; 
+        }
+        .color:nth-child(12){
+            background-color:#bbe8ff; 
+        }
+        .color:nth-child(13){
+            background-color:#b350d1; 
+        }
+        .color:nth-child(14){
+            background-color:#f6f6f4; 
+        }
+        .color:nth-child(15){
+            background-color:#a7cce7; 
+        }
+        .color:nth-child(16){
+            background-color:#8587eb; 
+        }
+        .color:nth-child(16){
+            background-color:#0e5b97;
+        }
+        .color:nth-child(17){
+            background-color:#f7e2f5;
+        }
+        .color:nth-child(18){
+            background-color:#e9a5d4;
+        }
+        .color:nth-child(19){
+            background-color:#9b82d3;
+        }
+        .color:nth-child(20){
+            background-color:#fbf8d5;
+        }
+        .color:nth-child(21){
+            background-color:#b088fb;
+        }
+        .color:nth-child(22){
+            background-color:black;
+        }
+        
     }
 }
 
@@ -102,9 +156,11 @@ select:hover {
 
 section{
     padding: 10px;
-    border: ridge rgb(222, 222, 222);
+    border: outset rgb(222, 222, 222);
     width: 700px;
     background-color: rgb(215, 215, 215);
+    margin: auto;
+    margin-top: 50px;
     .window_details{
         
         //border: solid rgb(199, 33, 199);
@@ -114,10 +170,21 @@ section{
         display: flex;
         justify-content: space-between;
 
+        
+
         #file_name{
             font-size: 30px;
             color: white;
             padding-left: 10px;
+            display: flex;
+
+            .logo{
+                height: 30px;
+                width: 20px;
+                margin-right: 10px;
+                background-image: url("paint.png");
+                background-size: cover;
+            }
         }
         .buttons{
             height:30px;
@@ -127,7 +194,7 @@ section{
             margin: 2px;
             
             .button{
-                border: ridge  rgb(222, 222, 222);
+                border: outset  rgb(222, 222, 222);
                 background-color: rgb(222, 222, 222);
                 height: 25px;
                 width: 30px;
@@ -152,23 +219,36 @@ section{
       
         }
     }
-    .tool_box{
-        height: 250px;
-        width: 80px;
-        border: ridge  rgb(222, 222, 222);
-        margin-right: 10px;
-    }
 
-    .palette{
-        margin-top: 10px;
-        width: 250px;
-        height: 60px;
-        border: ridge  rgb(222, 222, 222);
-        margin-right: 10px;
-    }
+
     #canvas{
         //margin-top: 20px;
         background-color: white;
         margin-bottom: 10;
+    }
+}
+
+
+
+/***TOOLBOX***/
+.tool_box{
+    height: 330px;
+    width: 70px;
+    //border: ridge  rgb(222, 222, 222);
+    margin-right: 10px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+
+    .tool{
+        height: 30px;
+        width: 30px ;
+        border: outset  rgb(222, 222, 222);
+    }
+    .tool:active {
+        height: 34px;
+        width: 34px ;
+        background-color: rgb(186, 186, 186);
+        border: outset 1px rgb(222, 222, 222);
     }
 }
